--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -42,7 +42,9 @@ jobs:
         id: list
         run: |
           # Get changed charts from ct
-          changed_charts=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }} --print-config=false)
+          target_branch="${{ github.event.repository.default_branch }}"
+          git fetch origin "$target_branch" --depth=1
+          changed_charts=$(ct list-changed --target-branch "$target_branch" --print-config=false)
 
           # Handle workflow_dispatch input
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
@@ -50,6 +52,19 @@ jobs:
               changed_charts=$(find charts -name Chart.yaml -exec dirname {} \; | sed 's|charts/||' | sort)
             else
               changed_charts="${{ github.event.inputs.charts }}"
+            fi
+          else
+            changed_charts=$(echo "$changed_charts" | sed 's|^charts/||')
+          fi
+
+          if [ -z "$changed_charts" ]; then
+            diff_files=$(git diff --name-only "origin/$target_branch"...HEAD | grep '^tests/integration/' || true)
+            if [ -n "$diff_files" ]; then
+              inferred=$(echo "$diff_files" | sed -n 's|tests/integration/pytest_suite/charts/test_\([^/]*\)\.py|\1|p' | sort -u)
+              if [ -z "$inferred" ]; then
+                inferred=$(find charts -name Chart.yaml -exec dirname {} \; | sed 's|charts/||' | sort)
+              fi
+              changed_charts="$inferred"
             fi
           fi
 
@@ -81,27 +96,38 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          check-latest: true
+
+      - name: Cache Python virtualenv
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: ${{ runner.os }}-venv-${{ hashFiles('tests/integration/pytest_suite/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-
+
+      - name: Cache kind image
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/kind
+          key: ${{ runner.os }}-kind-v1.30.0
+          restore-keys: |
+            ${{ runner.os }}-kind-
+
       - name: Set up Helm
         uses: azure/setup-helm@v4.2.0
         with:
           version: v3.14.0
 
-      - name: Set up Task
-        uses: arduino/setup-task@v1
-        with:
-          version: 3.x
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Add helm repositories
-        run: |
-          helm repo add bitnami https://charts.bitnami.com/bitnami
-          helm repo add stable https://charts.helm.sh/stable
-          helm repo update
-
       - name: Create kind cluster
         uses: helm/kind-action@v1.10.0
         with:
           wait: 120s
+          node_image: kindest/node:v1.30.0
 
       - name: Wait for cluster to be ready
         run: |
@@ -109,25 +135,33 @@ jobs:
           kubectl wait --for=condition=ready nodes --all --timeout=300s
           kubectl get nodes -o wide
 
-      - name: Check if integration test exists
-        id: check-test
+      - name: Prepare Python environment
         run: |
-          if [ -f "tests/integration/charts/${{ matrix.chart }}/integration-test.sh" ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "Integration test found for ${{ matrix.chart }}"
+          if [ ! -d ".venv" ]; then
+            python -m venv .venv
+          fi
+          . .venv/bin/activate
+          pip install --upgrade pip
+          pip install -r tests/integration/pytest_suite/requirements.txt
+
+      - name: Check if pytest suite exists
+        id: pytest-check
+        run: |
+          test_file="tests/integration/pytest_suite/charts/test_${{ matrix.chart }}.py"
+          if [ -f "$test_file" ]; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+            echo "Pytest suite found for ${{ matrix.chart }}"
           else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "No integration test found for ${{ matrix.chart }}"
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+            echo "No pytest suite found for ${{ matrix.chart }}"
           fi
 
-      - name: Run chart lint (prerequisite)
-        if: steps.check-test.outputs.exists == 'true'
-        run: task lint CHART=${{ matrix.chart }}
-
-      - name: Run integration tests
-        if: steps.check-test.outputs.exists == 'true'
-        run: task test-custom CHART=${{ matrix.chart }}
-        timeout-minutes: 10
+      - name: Run pytest integration suite
+        if: steps.pytest-check.outputs.exists == 'true'
+        run: |
+          . .venv/bin/activate
+          pytest tests/integration/pytest_suite/charts/test_${{ matrix.chart }}.py
+        timeout-minutes: 20
 
       - name: Debug on failure
         if: failure() && steps.check-test.outputs.exists == 'true'
@@ -151,10 +185,9 @@ jobs:
           echo "=== EVENTS ==="
           kubectl get events -n "${{ matrix.chart }}-integration-test" --sort-by='.lastTimestamp' || true
 
-      - name: Cleanup test namespace (if exists)
+      - name: Cleanup kind cluster
         if: always()
-        run: |
-          kubectl delete namespace "${{ matrix.chart }}-integration-test" --timeout=60s || true
+        run: kind delete cluster --name chart-testing || true
 
   # Summary job that depends on all integration tests
   integration-summary:
@@ -179,4 +212,3 @@ jobs:
           else
             echo "⚠️ Integration tests completed with status: ${{ needs.integration-test.result }}"
           fi
-
